--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "5.0.1"
 dotenv = "0.15.0"
 eframe = "0.27.2"
 grammers-client = "0.6.0"
 grammers-session = "0.5.2"
+grammers-tl-types = "0.6.0"
+home = "0.5.9"
 rfd = "0.14.1"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
